--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,15 +32,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install telethon  # Ensure telethon is installed
+
       - name: Run Data Scraping
         run: |
           python scripts/scrape_data.py
-  
-      - name: Upload Scraped Data
-        uses: actions/upload-artifact@v4
-        with:
-          name: scraped-data
-          path: data/raw/
 
   data_cleaning:
     needs: data_scraping
