--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,34 +25,28 @@ jobs:
           # Install telethon explicitly
           pip install telethon
 
-  data_scraping:
-    needs: setup
+  scrape-data:
     runs-on: ubuntu-latest
+    environment: env  # Reference the environment here
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
+      - name: Set Environment Variables
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install telethon
+          echo "API_ID=${{ vars.API_ID }}" >> $GITHUB_ENV
+          echo "API_HASH=${{ vars.API_HASH }}" >> $GITHUB_ENV
+
       - name: Debug Environment Variables
         run: |
           echo "API_ID: $API_ID"
           echo "API_HASH: $API_HASH"
-      - name: Set Environment Variables
-        run: |
-          echo "API_ID=${{ secrets.API_ID }}" >> $GITHUB_ENV
-          echo "API_HASH=${{ secrets.API_HASH }}" >> $GITHUB_ENV
 
-
-      - name: Run Data Scraping
-        run: |
-          python scripts/scrape_data.py
+      - name: Run Scraper
+        run: python scripts/scrape_data.py
 
   data_cleaning:
-    needs: data_scraping
+    needs: scrape-data
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
