--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,25 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
+      
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
-
-      - name: Install Dependencies
+          python-version: '3.12'
+          
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           # Install telethon explicitly
           pip install telethon
-
+  
+      - name: Run data scraping script
+        env:
+          API_ID: ${{ secrets.API_ID }}
+          API_HASH: ${{ secrets.API_HASH }}
+        run: python scripts/scrape_data.py
+        
   scrape-data:
     runs-on: ubuntu-latest
     environment: env  # Reference the environment here
