--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   app:
     build: .
-    command: ["uvicorn", "my_project.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["uvicorn", "my_project.app:app", "--host", "0.0.0.0", "--port", "8000"]
     ports:
       - "8000:8000"
     depends_on:
