--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,156 @@
+absl-py==2.1.0
+agate==1.9.1
+annotated-types==0.7.0
+anyio==4.8.0
+asttokens==3.0.0
+attrs==25.1.0
+babel==2.17.0
+boto3==1.36.11
+botocore==1.36.11
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+daff==1.3.46
+dbt==1.0.0.38.25
+dbt-adapters==1.13.2
+dbt-common==1.14.0
+dbt-core==1.9.2
+dbt-extractor==0.5.1
+dbt-postgres==1.9.0
+dbt-semantic-interfaces==0.7.4
+debugpy==1.8.12
+decorator==5.1.1
+deepdiff==7.0.1
+emoji==2.14.1
+executing==2.2.0
+fastapi==0.115.8
+filelock==3.17.0
+filetype==1.2.0
+fire==0.7.0
+fonttools==4.55.8
+fsspec==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.1.1
+grpcio==1.70.0
+h11==0.14.0
+huggingface-hub==0.24.7
+idna==3.7
+importlib-metadata==6.11.0
+ipykernel==6.29.5
+ipython==8.32.0
+isodate==0.6.1
+jedi==0.19.2
+Jinja2==3.1.5
+jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+leather==0.4.0
+Markdown==3.7
+MarkupSafe==3.0.2
+mashumaro==3.14
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+more-itertools==10.6.0
+mpmath==1.3.0
+msgpack==1.1.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+ordered-set==4.1.0
+packaging==24.2
+pandas==2.2.3
+parsedatetime==2.6
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==11.1.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+protobuf==5.29.3
+psutil==6.1.1
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
 pyaes==1.6.1
 pyasn1==0.6.1
+pybboxes==0.1.6
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-slugify==8.0.4
+pytimeparse==1.1.8
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.2.1
+referencing==0.36.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+roboflow==1.1.53
+rpds-py==0.22.3
 rsa==4.9
+s3transfer==0.11.2
+sahi==0.11.20
+scipy==1.15.1
+seaborn==0.13.2
+shapely==2.0.7
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+snowplow-tracker==1.0.4
+SQLAlchemy==2.0.37
+sqlparse==0.5.3
+stack-data==0.6.3
+starlette==0.45.3
+sympy==1.13.1
 Telethon==1.38.1
-uvicorn[standard]
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+termcolor==2.5.0
+terminaltables==3.1.10
+text-unidecode==1.3
+thop==0.1.1.post2209072238
+torch==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+triton==3.2.0
+types-requests==2.32.0.20241016
+typing_extensions==4.12.2
+tzdata==2025.1
+ultralytics==8.3.70
+ultralytics-thop==2.0.14
+urllib3==2.3.0
+uvicorn==0.34.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+yolov5==7.0.14
+zipp==3.21.0
